frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80               # Внутренний порт сервиса
      targetPort: 80         # Порт Nginx во фронтенде
      nodePort: 30080        # Порт, который откроется на IP твоего Debian (30000-32767)
  type: NodePort
